Custom Wetty changes for SiliCon-CTF

--- a/wetty/conf/nginx.template
+++ b/wetty/conf/nginx.template
@@ -11,7 +11,7 @@ server {
   }
 
   # headers
-  add_header X-Frame-Options "SAMEORIGIN" always;
+  add_header X-Frame-Options "" always;
   add_header X-XSS-Protection "1; mode=block" always;
   add_header X-Content-Type-Options "nosniff" always;
   add_header X-UA-Compatible "IE=Edge" always;
