--- a/wetty/package.json
+++ b/wetty/package.json
@@ -124,6 +124,7 @@
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "toastify-js": "^1.9.1",
+    "wetty": "file:.",
     "winston": "^3.3.3",
     "xterm": "^4.8.1",
     "xterm-addon-fit": "^0.4.0",
