--- a/arcade/k8s-deployment/ingress.yaml
+++ b/arcade/k8s-deployment/ingress.yaml
@@ -8,8 +8,9 @@ metadata:
     kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: letsencrypt
     nginx.ingress.kubernetes.io/whitelist-source-range: ""
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
-    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      rewrite ^([^.?]*[^/])$ $1/ redirect;
 spec:
   tls:
   - hosts:
@@ -19,7 +20,7 @@ spec:
   - host: arcade.silicon-ctf.party
     http:
       paths:
-      - path: /pacman($|/)(.*)
+      - path: /pacman/(.*)
         pathType: Prefix
         backend:
           service:
