Add additional ranges to allow list

--- a/rootthebox/kubernetes/ingress.yaml
+++ b/rootthebox/kubernetes/ingress.yaml
@@ -9,6 +9,9 @@ metadata:
     cert-manager.io/cluster-issuer: letsencrypt
     nginx.ingress.kubernetes.io/whitelist-source-range: ""
     nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/affinity: "cookie"
+    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
+    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
 spec:
   tls:
   - hosts:
