Re-add missing code from big file cleanup

--- a/level-0/web-log-server/Dockerfile
+++ b/level-0/web-log-server/Dockerfile
@@ -2,7 +2,7 @@ FROM alpine:latest
 
 RUN apk add build-base bash
 
-RUN adduser --disabled-password --gecos '' mario
+RUN adduser --disabled-password --gecos '' luigi
 
 COPY .hellofriend.txt /tmp
 COPY apache.log.tar.gz  /tmp
@@ -11,5 +11,14 @@ RUN tar xzfv /tmp/apache.log.tar.gz -C /var/log/
 RUN rm /tmp/apache.log.tar.gz
 RUN chown -R root: /var/log/httpd
 
-WORKDIR /home/mario
-USER mario
+WORKDIR /home/luigi
+
+COPY entrypoint.sh .
+COPY intro.txt .
+RUN chown luigi: entrypoint.sh
+RUN chown luigi: intro.txt
+RUN chmod 500 entrypoint.sh
+
+USER luigi
+
+CMD ["./entrypoint.sh"]
