--- a/infra/rootthebox/kubernetes/deployment.yaml
+++ b/infra/rootthebox/kubernetes/deployment.yaml
@@ -19,7 +19,7 @@ spec:
         "beta.kubernetes.io/os": linux
       containers:
       - name: rootthebox
-        image: registry/rootthebox:latest
+        image: rootthebox:latest
         env:
         - name: MEMCACHED_SERVERS
           value: "10.0.30.45"
